python/istio/destination_rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: python
spec:
  host: python #.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
