python/istio/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: python-test
spec:
  hosts:
  - "*"
  gateways:
  - python-test-gw
  http:
  - match:
    - uri:
        exact: /python-test
    route:
    - destination:
        host: python-test #.svc.cluster.local
        port:
          number: 14000
    retries:
      attempts: 3
      perTryTimeout: 2s
